<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:text="@string/default_time"
        app:layout_constraintBottom_toTopOf="@+id/start_pause_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/start_pause_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_pause_btn"
        app:layout_constraintTop_toTopOf="@id/start_pause_btn" />

    <Button
        android:id="@+id/start_pause_btn"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@id/reset_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerTextView"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="197dp" />

</androidx.constraintlayout.widget.ConstraintLayout>